objects/ssot__WasteFootprint__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AnnualEmssnInventoryId__c</fullName>
        <label>Annual Emission Inventory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuditApprovalStatus__c</fullName>
        <label>Audit Approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FootprintStage__c</fullName>
        <label>Footprint Stage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Waste Footprint Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingDate__c</fullName>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingYear__c</fullName>
        <label>Reporting Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmssnSrcId__c</fullName>
        <label>Scope 3 Emissions Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetEnvrSrcId__c</fullName>
        <label>Stationary Asset Environmental Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScp3DnstrmEndLifeSoldPrdctNumber__c</fullName>
        <label>Supl Scp3 Dnstrm EOL Sold Product</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScp3UpstrmWstGenInOperNumber__c</fullName>
        <label>Supl Scp3 Upstrm Waste Gen In Operation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747384002592_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WasteFootprint_AnnualEmssnInventoryI_rel</label>
        <referenceTo>ssot__AnnualEmissionsInventory__dlm</referenceTo>
        <relationshipLabel>WasteFootprint_AnnualEmssnInventoryI_rel</relationshipLabel>
        <relationshipName>rel_1747384002592_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747384016377_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WasteFootprint_Scope3EmssnSrcId_map__rel</label>
        <referenceTo>ssot__Scope3EmissionsSource__dlm</referenceTo>
        <relationshipLabel>WasteFootprint_Scope3EmssnSrcId_map__rel</relationshipLabel>
        <relationshipName>rel_1747384016377_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747384017490_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WasteFootprint_StnryAssetEnvrSrcId_m_rel</label>
        <referenceTo>ssot__StationaryAssetEnvSource__dlm</referenceTo>
        <relationshipLabel>WasteFootprint_StnryAssetEnvrSrcId_m_rel</relationshipLabel>
        <relationshipName>rel_1747384017490_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>